--- a/cv/index.html
+++ b/cv/index.html
@@ -5,17 +5,17 @@ title: Ruto
 
 	<div class="cv">
 		<a href="#" class="download" title=" "> </a>			
-					<h1>The Rutos</h1>
+					<h1>Contact Wyatt</h1>
 					<address>
-					<strong>contact wyatt</strong><br>
+					<strong>hmu :)</strong><br>
 					Los Angeles<br>
-					City State 12345<br>
-					<abbr title="phone">P:</abbr> 323)915-6784<br>
-					<span class="obfuscate">ptrgraphics@gmail.com</span>
+					California<br>
+					<abbr title="phone">P:</abbr> 323) 915-6784<br>
+					<span class="obfuscate"> Email: ptrgraphics@gmail.com</span>
 					</address>
 
-					<h2>Select Publications</h2>
+				
 
-					<p><strong>Wyatt Jacobo</strong> (204
+					
 
 	</div>
