--- a/cv/index.html
+++ b/cv/index.html
@@ -3,7 +3,7 @@ layout: default
 title: Ruto
 ---
 
-	<div class="cv">
+	<div class="contact">
 		<a href="#" class="download" title=" "> </a>			
 					<h1>Contact Wyatt</h1>
 					<address>
